# yggdrasil-worker-desktop-notification

./: README.md  meson.build
data/: com.redhat.Yggdrasil1.Worker1.desktop_notification.desktop.in  com.redhat.Yggdrasil1.Worker1.desktop_notification.service.in  meson.build
src/: application.vala  constants.vala.in  main.vala  meson.build
